JDA 5, better exploit reports, redone antispam and more